<resources>
    <string name="app_name">My Flower</string>
    <string name="txt_harder">MY LOVE\,</string>
    <string name="txr_name">YOU LIKE A BOY GROUP</string>
    <string name="txtChoice">Editor\'s Choice</string>
    <string name="str_decription">A boy group\,BTS\,with seven menbers</string>
    <string name="bhe">Bit Hit Entertainment</string>
    <string name="btn_text">Vote Now</string>
</resources>
