<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bts_image"
        android:layout_width="404dp"
        android:layout_height="280dp"
        android:scaleType="centerInside"
        android:src="@drawable/k"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_harder"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginLeft="@dimen/dimen_12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bts_image"/>
    <TextView
        android:id="@+id/txt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txr_name"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintLeft_toLeftOf="@id/txt_name"/>
    <ImageView
        android:id="@+id/ic_star"
        android:layout_width="@dimen/dimen_24dp"
        android:layout_height="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintTop_toBottomOf="@id/txt_header"
        app:layout_constraintLeft_toLeftOf="@id/txt_name"
        android:src="@drawable/ic_star"/>
    <TextView
        android:id="@+id/txt_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtChoice"
        android:textSize="@dimen/choice"
        android:textColor="@color/themeColor"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintLeft_toRightOf="@id/ic_star"
        app:layout_constraintTop_toBottomOf="@id/txt_header"/>
    <TextView
        android:id="@+id/txt_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_decription"
        android:textSize="@dimen/descriptionSize"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:textColor="@color/textColor"
        app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@id/ic_star"/>

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bhe"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/txt_des" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/btn_text"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/dimen_12dp"
        android:paddingRight="@dimen/dimen_12dp"
        android:layout_marginRight="@dimen/dimen_12dp"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_price"
        app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>